cmake_minimum_required(VERSION 3.10)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode main.cpp RemoveDuplicates/RemoveDuplicates.cpp RemoveDuplicates/RemoveDuplicates.h MaxProfit/MaxProfit.cpp MaxProfit/MaxProfit.h Rotate/Rotate.cpp Rotate/Rotate.h ContainsDuplicate/ContainsDuplicate.cpp ContainsDuplicate/ContainsDuplicate.h TwoSum/TwoSum.cpp TwoSum/TwoSum.h MoveZeroes/MoveZeroes.cpp MoveZeroes/MoveZeroes.h PlusOne/PlusOne.cpp PlusOne/PlusOne.h)